--- a/repository/package/skin/src/main/webapp/screen_ie.css
+++ b/repository/package/skin/src/main/webapp/screen_ie.css
@@ -8,3 +8,7 @@ div.template-type-center-body, div.editor-perspective-center-body {
    height: 1%;
 }
 /* End Hide from IE-Mac */
+
+.simple-values input[type="file"] { width: 300px; border: 1px solid #666; float:left;}
+.simple-values input[type="submit"] { float:left; clear:left; }
+.resource-upload { height: 60px;}
